--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -4,7 +4,7 @@ h1, h2 {color:firebrick}
 
 .special{color:purple}
 
-.evenrow{color:purple}
+.evenrow{background-color:purple}
 
 h1 {
     font-size: 2em; 
