--- a/lab08/styles2.css
+++ b/lab08/styles2.css
@@ -5,12 +5,9 @@ h2 {color: #ED553B}
 h1 {font-size: 1.5em;}
 h2{font-size: 1em;}
 
-.evenrow {background-color: #E8C6AA ;}
+.evenrow {background-color: #403B6A;}
 
-.img1 {float:left; margin-right: 10px;}
-.clear{clear:both;}
-
-a:link {color: #E8C6AA}
+a:link {color: #403B6A}
 a:visited {color: #23253C}
 a:hover {color: #999999}
 
@@ -29,5 +26,6 @@ nav a {color: #F6D55C;}
 
 nav a:hover {background-color: #E8C6AA;}
 
-.footer{float:right;}
-.main{float:right;}
+.row1 {float:inline-start;}
+
+
