--- a/lab10/styles2.css
+++ b/lab10/styles2.css
@@ -5,7 +5,7 @@ h2 {color: #ED553B}
 h1 {font-size: 1.5em;}
 h2{font-size: 1em;}
 
-.evenrow {background-color: #403B6A;}
+.evenrow {background-color: #FFB9F8;}
 
 a:link {color: #403B6A}
 a:visited {color: #23253C}
