--- a/websiteproject/materials/projectCSS.css
+++ b/websiteproject/materials/projectCSS.css
@@ -4,6 +4,7 @@ nav {
     margin-bottom: 20px;
     margin-left: 490px;
     font-size: 20px;
+    justify-content: center;
 }
 nav a{color: #ffffff;}
 nav a:hover {background-color: #8080ff;}
