--- a/websiteproject/materials/projectCSS.css
+++ b/websiteproject/materials/projectCSS.css
@@ -15,3 +15,4 @@ body{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+head {display:flex; justify-content: center; color:orangered}
